<resources>
    <string name="app_name">AceSteps</string>
    <string name="workout_detected_notification_title">New workout detected!</string>
    <string name="workout_notifications_channel_title">Workout Notifications</string>
    <string name="workout_notification_channel_description">Get notified whenever the workout is finished!</string>
    <string name="workout_notification_title">%1$d minutes of %2$s were detected!</string>
    <string name="service_notification_channel_name">Workout Detector</string>
    <string name="service_notification_channel_description">This notification channel is used to detect steps in background</string>
    <string name="service_notification_title">Detecting Activity</string>
    <string name="workouts_label">Workouts</string>
    <string name="walking_title">Walking</string>
    <string name="jogging_title">Jogging</string>
    <string name="running_title">Running</string>
    <string name="cup">Cup</string>
    <string name="you_ve_reached_your_target">You\'ve reached your steps target!</string>
    <string name="statistics_title">Statistics</string>
    <string name="active_time_title">Active Time</string>
    <string name="calories_burnt_title">Calories Burnt</string>
    <string name="total_distance_title">Total Distance</string>
    <string name="average_speed_title">Average Speed</string>
    <string name="average_pace_title">Average Pace</string>
    <string name="updated">Updated </string>
    <string name="kcal_caption">kcal</string>
    <string name="km_caption">km</string>
    <string name="speed_caption">km/h</string>
    <string name="pace_caption">per km</string>
    <string name="target_reached_notification_channel">Target reached!</string>
    <string name="target_reached_notification_channel_description">Receive notifications once the target is reached!</string>
    <string name="target_notification_title">Target reached!</string>
    <string name="target_activity_time_reached_description">You\'ve reached your activity time target! Congratulations!</string>
    <string name="target_steps_reached_description">You\'ve reached your steps target! Congratulations!</string>
    <string name="hr_label">hr</string>
    <string name="mins_label">mins</string>
    <string name="secs_label">secs</string>
    <string name="menu_remove_item">Remove</string>
    <string name="steps_caption">steps</string>
    <string name="speed_caption1">Speed</string>
    <string name="workout_not_found">The workout was not found!</string>
    <string name="no_workouts_found_be_more_active">No workouts found! Be more active!</string>
    <string name="settings">Settings</string>
    <string name="title_step_pref">Daily step target</string>
    <string name="summary_step_pref">Set a daily step target to help you stay active and healthy.</string>
    <string name="steps_title_pref">Steps</string>
    <string name="title_time_pref">Daily activity time target</string>
    <string name="summary_time_pref">Track daily minutes and overall progress.</string>
    <string name="time_title_pref">Active minutes per day</string>
    <string name="height_pref">Your height</string>
    <string name="height_summary_pref">It\'s used to calculate the distance more accurately</string>
    <string name="height_dtitle_pref">Your height in centimeters</string>
</resources>
