<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_activity_24px"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:srcCompat="@drawable/ic_noun_fire_17853" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:srcCompat="@drawable/ic_pace_24dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.dateDurationString}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Fri, 20 Sep, 13:48 - 14:15" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.totalSteps}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/chart"
                tools:text="3000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.caloriesBurnt}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:text="300" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/speed_caption1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="@+id/chart"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.pace}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:text="00:01" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/steps_caption"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/kcal_caption"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:text="@string/pace_caption"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date">

                <TextView
                    android:id="@+id/hours_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{String.valueOf(viewModel.hours)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="@{viewModel.hours > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1" />

                <TextView
                    android:id="@+id/hours_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/hr_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_black"
                    android:visibility="@{viewModel.hours > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/hours_duration"
                    app:layout_constraintStart_toEndOf="@+id/hours_duration"
                    app:layout_constraintTop_toTopOf="@+id/hours_duration"
                    app:layout_constraintVertical_bias="0.75" />

                <TextView
                    android:id="@+id/minutes_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/mins_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_black"
                    android:visibility="@{viewModel.minutes > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/minutes_duration"
                    app:layout_constraintStart_toEndOf="@+id/minutes_duration"
                    app:layout_constraintTop_toTopOf="@+id/minutes_duration"
                    app:layout_constraintVertical_bias="0.75" />

                <TextView
                    android:id="@+id/seconds_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/secs_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_black"
                    android:visibility="@{viewModel.seconds > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/seconds_duration"
                    app:layout_constraintStart_toEndOf="@+id/seconds_duration"
                    app:layout_constraintTop_toTopOf="@+id/seconds_duration"
                    app:layout_constraintVertical_bias="0.75" />

                <TextView
                    android:id="@+id/minutes_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{String.valueOf(viewModel.minutes)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="@{viewModel.minutes > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hours_label"
                    tools:text="20" />

                <TextView
                    android:id="@+id/seconds_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{String.valueOf(viewModel.seconds)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="@{viewModel.seconds > 0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/minutes_label"
                    tools:text="15" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


                <TextView
                    android:id="@+id/length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.distance}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2.31 km" />

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.speed}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="5.1 km/h" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/total_distance_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/length"
                    app:layout_constraintStart_toStartOf="@+id/length"
                    app:layout_constraintTop_toBottomOf="@+id/length" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/average_speed_title"
                    app:layout_constraintEnd_toEndOf="@+id/speed"
                    app:layout_constraintStart_toStartOf="@+id/speed"
                    app:layout_constraintTop_toBottomOf="@+id/speed" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.tarasbarabash.acesteps.viewModels.WorkoutVM" />
    </data>
</layout>